--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,58 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:32</td>   <td>29786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:38</td>   <td>36374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:45</td>   <td>43500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:54</td>   <td>52193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:01</td>   <td>59550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:13</td>   <td>70830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:21</td>   <td>79520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:30</td>   <td>88019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:25:55</td>   <td>-6457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:03</td>   <td>639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:32</td>   <td>30418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:39</td>   <td>37004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:46</td>   <td>44134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:55</td>   <td>52818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:06</td>   <td>64276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:13</td>   <td>71464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:22</td>   <td>80143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@5bc79255]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:00</td>   <td>-1417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:29</td>   <td>27457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:37</td>   <td>34940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:44</td>   <td>42101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:26:53</td>   <td>50727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:00</td>   <td>58387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:11</td>   <td>69501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:20</td>   <td>77846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/07/23 10:27:28</td>   <td>86453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@5bc79255]">test</td> 
-  <td>main@54495403</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:51</td>   <td>2673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:54</td>   <td>5601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataDrivenTesting.afterMethod()[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:45</td>   <td>-4044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:49</td>   <td>189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:51</td>   <td>2866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataDrivenTesting.beforeMethod()[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:49</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">test</td> 
+  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:51</td>   <td>2670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">test</td> 
+  <td>main@1077072774</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>22/01/24 17:17:54</td>   <td>5597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTesting.test(java.lang.String, java.lang.String)[pri:0, instance:tests.DataDrivenTesting@7354b8c5]">test</td> 
+  <td>main@1077072774</td>   <td></td> </tr>
 </table>
